syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package com.loopring.lightcone.proto;

message Order {

}

message SubmitOrderReq {}
message SubmitOrderResp {}

message GetOrdersReq {}
message GetOrdersResp {}

message CancelOrdersReq {}
message CancelOrdersResp {}

message GetOrder {}
message OneOrder {}

message GetOrders {}
message MultiOrders {}

message GetTopOrders {}
message TopOrders {}

message FetchTopOrderIds {}
message TopOrdersIds {}

message SaveOrders {}
message SaveUpdatedOrders {}
message OrdersSaved {}

message UpdateOrders {}
message OrdersUpdated {}

message SoftCancelOrders {}
message OrdersSoftCancelled {}
message NotifyOrderCancelled {}
message NotifyOrdersSoftCancelled {}

message DeferOrder {
    string orderhash = 1;
    int64 deferredTime = 2;
}

message MarkOrdersDeferred {
    repeated DeferOrder deferOrders = 1;
}

message OrderStatusChanged {}

message MarkOrdersSettling {
    repeated string orderHashes = 1;
}

message MarkOrdersBeingMatched {
    repeated string orderHashes = 1;
}

message UpdateOrdersById {}